--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-10">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-11">
 		<attributes>
 			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
@@ -23,7 +23,5 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="Jamepad.jar"/>
-	<classpathentry kind="lib" path="C:/Temp/Javacv/javacpp.jar"/>
-	<classpathentry kind="lib" path="C:/Temp/Javacv/javacv.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
