--- a/.classpath
+++ b/.classpath
@@ -6,22 +6,22 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="opencv-x64/opencv-420.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Tello-SDK/opencv-x64"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="Jamepad.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-10">
 		<attributes>
 			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="Jamepad.jar"/>
+	<classpathentry kind="lib" path="Javacv/ffmpeg-windows-x86_64.jar"/>
+	<classpathentry kind="lib" path="Javacv/ffmpeg.jar"/>
+	<classpathentry kind="lib" path="Javacv/javacpp.jar"/>
+	<classpathentry kind="lib" path="Javacv/opencv-windows-x86_64.jar"/>
+	<classpathentry kind="lib" path="Javacv/opencv_java430.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
