--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,12 @@
     </plugins>
   </build>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20180130</version>
+    </dependency>
+  </dependencies>
 
 </project>
