--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,24 @@
       <artifactId>json</artifactId>
       <version>20180130</version>
     </dependency>
+    <dependency>
+      <groupId>net.sourceforge.stripes</groupId>
+      <artifactId>stripes</artifactId>
+      <version>1.7.0-async-beta</version>
+      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>net.sourceforge.stripes</groupId>
+      <artifactId>tests</artifactId>
+      <version>1.5.3</version>
+      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>net.sourceforge.stripes</groupId>
+      <artifactId>stripes-parent</artifactId>
+      <version>1.7.0-async-beta</version>
+      <type>pom</type>
+    </dependency>
   </dependencies>
 
 </project>
