--- a/.classpath
+++ b/.classpath
@@ -11,9 +11,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="opencv-x64/opencv-420.jar">
-		
-	</classpathentry>
+	<classpathentry kind="lib" path="opencv-x64/opencv-420.jar"/>
 	<classpathentry kind="lib" path="Jamepad.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
