--- a/pom.xml
+++ b/pom.xml
@@ -6,44 +6,50 @@
 
     <groupId>com.swdevs.tello</groupId>
     <artifactId>Tello-Demo</artifactId>
-    <version>1.0-SNAPSHOT</version>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>8</source>
-          <target>8</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+    <version>2.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.json</groupId>
-      <artifactId>json</artifactId>
-      <version>20180130</version>
-    </dependency>
-    <dependency>
-      <groupId>net.sourceforge.stripes</groupId>
-      <artifactId>stripes</artifactId>
-      <version>1.7.0-async-beta</version>
-      <type>jar</type>
-    </dependency>
-    <dependency>
-      <groupId>net.sourceforge.stripes</groupId>
-      <artifactId>tests</artifactId>
-      <version>1.5.3</version>
-      <type>jar</type>
-    </dependency>
-    <dependency>
-      <groupId>net.sourceforge.stripes</groupId>
-      <artifactId>stripes-parent</artifactId>
-      <version>1.7.0-async-beta</version>
-      <type>pom</type>
-    </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180130</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sourceforge.stripes</groupId>
+            <artifactId>stripes</artifactId>
+            <version>1.7.0-async-beta</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>net.sourceforge.stripes</groupId>
+            <artifactId>tests</artifactId>
+            <version>1.5.3</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>net.sourceforge.stripes</groupId>
+            <artifactId>stripes-parent</artifactId>
+            <version>1.7.0-async-beta</version>
+            <type>pom</type>
+        </dependency>
+    
+        <dependency>
+            <groupId>nu.pattern</groupId>
+            <artifactId>opencv</artifactId>
+            <version>2.4.9-4</version>
+        </dependency>
+    </dependencies>
 
 </project>
